fix buttons on ios

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ ul {
     width: 50px;
     height: 50px;
     font-size: 39px;
+    -webkit-appearance: none;
 }
 
 h1 {
@@ -70,6 +71,7 @@ button {
     cursor: pointer;
     border: none;
     border-radius: 10px;
+    -webkit-appearance: none;
 }
 
 .buttons a{
